# ptr

./: .coveragerc  .flake8  .gitignore  .ptrconfig  .pylint  .travis.yml  CHANGES.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  action.yml  azure-pipelines.yml  ci.py  entrypoint.sh  fuzz.py  mypy.ini  ptr.py  ptr_tests.py  ptr_tests_fixtures.py  ptrconfig.sample  pyproject.toml  release_to_pypi.sh  requirements.txt  setup.cfg.sample  setup.py
.azure-pipelines/: macos.yml  windows.yml
.azure-pipelines/jobs/: test.yml
.azure-pipelines/steps/: run-tests.yml
.github/: dependabot.yml  feature_request.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  ci_latest.yml  fuzz.yml  pypi_upload.yml  pythonpackage.yml
action/: Dockerfile
ptr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
